--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
             </a>
         </div>
     {{ else }}
-        {{ partial "sidebar/left.html" . }}
+        {{ partial "sidebar/left_user.html" . }}
     {{ end }}
 {{ end }}
 
